fix edit mode button spacing

--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,6 @@ button.edit {
   /* VVV push buttons to right side VVV */
   margin-left: auto;
   margin-right: 1vw;
-  /* font-size: 0.7rem; */
   text-align: center;
   line-height: normal;
   width: 1.5rem;
@@ -128,7 +127,6 @@ button.edit {
 
 button.discard-edit {
   padding: 0;
-  margin-left: 0.5rem;
   text-align: center;
   line-height: normal;
   width: 1.5rem;
@@ -141,8 +139,8 @@ button.discard-edit {
 
 button.save-edit {
   padding: 0;
-  margin-left: 0.5rem;
-  /* font-size: 0.75rem; */
+  margin-left: 1vw;
+  margin-right: 1vw;
   text-align: center;
   line-height: normal;
   width: 1.5rem;
